--- a/XYZReader/src/main/res/values-land/macro_layout.xml
+++ b/XYZReader/src/main/res/values-land/macro_layout.xml
@@ -1,5 +1,8 @@
 <resources>
+    <!-- list -->
+    <integer name="list_column_count">3</integer>
     <!-- detail -->
+    <bool name="detail_is_card">true</bool>
     <dimen name="detail_photo_height">224dp</dimen>
     <dimen name="detail_inner_horiz_margin">112dp</dimen>
 </resources>
