--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -8,13 +8,16 @@
         android:id="@+id/toolbar_container"
         android:layout_width="match_parent"
         android:layout_height="110dp"
+        android:background="@color/theme_primary"
         android:gravity="bottom"
+        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
 
@@ -24,8 +27,7 @@
                 android:layout_height="?actionBarSize"
                 android:layout_gravity="bottom"
                 android:layout_marginLeft="@dimen/list_toolbar_side_margin"
-                android:layout_marginRight="@dimen/list_toolbar_side_margin"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                android:layout_marginRight="@dimen/list_toolbar_side_margin">
 
                 <android.support.v7.widget.AppCompatImageView
                     android:layout_width="wrap_content"
