--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -1,18 +1,20 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
     android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="320dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:titleEnabled="false">
 
@@ -20,17 +22,20 @@
                 android:id="@+id/photo_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax">
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/photo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
                     android:scaleType="centerCrop" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
                     android:background="@drawable/photo_background_protection" />
 
             </FrameLayout>
@@ -41,8 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 app:layout_collapseMode="pin"
-                android:background="#333"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+                android:background="#333">
 
                 <android.support.v7.widget.LinearLayoutCompat
                     android:id="@+id/meta_bar"
@@ -101,6 +105,8 @@
                 android:layout_marginTop="@dimen/fab_below_view_margin"
                 android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                 android:layout_marginRight="@dimen/detail_inner_horiz_margin"
+                android:maxLines="100"
+                android:ellipsize="end"
                 android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                 android:textColorLink="@color/theme_accent"
                 android:textSize="@dimen/detail_body_text_size" />
